--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "symfony/dependency-injection": "~2.3",
+        "symfony/dependency-injection": "^2.3 | ^3.0",
         "container-interop/service-provider": "dev-master",
         "symfony/framework-bundle": "^2.7 | ^3.0"
     },
@@ -23,4 +23,3 @@
         "psr-4": { "TheCodingMachine\\Interop\\ServiceProviderBridgeBundle\\": "src/" }
     }
 }
-
