--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.5.0",
         "symfony/dependency-injection": "^2.3 | ^3.0",
-        "container-interop/service-provider": "dev-master",
+        "container-interop/service-provider": "~0.1.0",
         "symfony/framework-bundle": "^2.7 | ^3.0"
     },
     "require-dev": {
