--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,10 @@
     "require": {
         "php": ">=5.5.0",
         "symfony/dependency-injection": "^2.3 | ^3.0",
-        "container-interop/service-provider": "~0.2.0",
+        "container-interop/service-provider": "dev-callables as 0.3.0",
         "symfony/framework-bundle": "^2.7 | ^3.0",
-        "puli/symfony-bundle": "^1.0"
+        "puli/symfony-bundle": "^1.0",
+        "thecodingmachine/service-provider-registry": "^1.0"
     },
     "require-dev": {
         "php": ">=5.6",
@@ -22,5 +23,7 @@
     },
     "autoload": {
         "psr-4": { "TheCodingMachine\\Interop\\ServiceProviderBridgeBundle\\": "src/" }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
