--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "container-interop/service-provider": "dev-callables as 0.3.0",
         "symfony/framework-bundle": "^2.7 | ^3.0",
         "puli/symfony-bundle": "^1.0",
-        "thecodingmachine/service-provider-registry": "^1.0"
+        "thecodingmachine/service-provider-registry": "^1.0",
+        "php-di/invoker": "^1.3"
     },
     "require-dev": {
         "php": ">=5.6",
