--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.5.0",
         "symfony/dependency-injection": "^2.3 | ^3.0",
-        "container-interop/service-provider": "dev-callables as 0.3.0",
+        "container-interop/service-provider": "~0.3.0",
         "symfony/framework-bundle": "^2.7 | ^3.0",
         "puli/cli": "^1.0",
         "puli/symfony-bundle": "^1.0",
