--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "require-dev": {
         "php": ">=5.6",
-        "phpunit/phpunit": "~5.0",
+        "phpunit/phpunit": "^8.5",
         "php-coveralls/php-coveralls": "^2.2"
     },
     "autoload": {
