--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ php:
  - 7.1
 
 before_script:
- - wget http://getcomposer.org/composer.phar
- - php composer.phar install --no-interaction
+ - composer install --no-interaction
 
 script:
  - mkdir -p build/logs
