--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ script:
  - phpunit --coverage-clover build/logs/clover.xml
 
 after_script:
- - php vendor/bin/coveralls -v
+ - php vendor/bin/php-coveralls -v
