--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "symfony/dependency-injection": "^2.3 | ^3.0",
+        "symfony/dependency-injection": "^2.3 | ^3.0 | ^4.0 | ^5.0",
         "container-interop/service-provider": "~0.4.0",
-        "symfony/framework-bundle": "^2.7 | ^3.0",
+        "symfony/framework-bundle": "^2.7 | ^3.0 | ^4.0 | ^5.0",
         "thecodingmachine/service-provider-registry": "^3.0",
         "thecodingmachine/common-factories": "^0.4",
         "thecodingmachine/discovery": "^1.2"
